--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="container">
+        <h1>Score Checker</h1>
         <div>
             <input type="number" max="20" id="score" placeholder="Enter Score">
             <button onclick="checkScore()">Check Score</button>
